// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-l-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-l-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-l-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-l-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) multi-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "flex-start",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={true}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "top",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-l-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-l-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-l-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-l-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix baseline (variant x size x {default,disabled} x modes) single-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={false}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#646466",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;

exports[`Input — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) single-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginBottom": 2,
        }
      }
    >
      Name
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderBottomColor": "rgba(51, 51, 51, 0.05)",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <TextInput
        accessibilityLabel="Name"
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#646466"
        style={
          {
            "color": "#333333",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
            "padding": 0,
            "textAlignVertical": "auto",
          }
        }
        testID="ui-input"
      />
    </View>
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
          "marginTop": 2,
        }
      }
    >
      hint
    </Text>
  </View>
</View>
`;
